--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -350,6 +350,10 @@ input[type="number"] {
 .text-danger {
 	color: #ff7272;
 }
+.text-grey {
+	color: grey;
+}
+
 .kt-portlet .kt-portlet__body {
 	padding: 5px 15px !important;
 }
