--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/applied-loan/applied-loan.component.html
@@ -189,6 +189,10 @@
                                 <button class="primary-button">{{loan.loanStage.name | uppercase}}</button>
                             </div>
 
+                            <div *ngIf="loan.loanStage.id == 14">
+                                <button class="primary-button">{{loan.loanStage.name | uppercase}}</button>
+                            </div>
+
                         </div>
                     </mat-cell>
                 </ng-container>
