--- a/gold-admin-frontend/src/app/views/partials/components/emi-logs-dialog/emi-logs-dialog.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/emi-logs-dialog/emi-logs-dialog.component.html
@@ -37,5 +37,8 @@
                     </tr>
             </table>
         </div>
+        <div class="text-center text-danger">
+            * The interest amount displayed is net of rebate offered by Augmont *
+        </div>
     </kt-portlet-body>
 </kt-portlet>
