--- a/gold-admin-frontend/src/app/views/partials/components/location/location.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/location/location.component.html
@@ -37,7 +37,7 @@
                 <mat-header-cell *matHeaderCellDef>Battery</mat-header-cell>
                 <mat-cell *matCellDef="let role">
                     <span *ngIf="role.battery; else noDataFound">
-                        {{role.battery}} %
+                        {{role.battery}}
                     </span>
                 </mat-cell>
             </ng-container>
