--- a/gold-admin-frontend/src/app/views/pages/admin/dashboard/dashboard.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/dashboard/dashboard.component.html
@@ -1,5 +1,6 @@
-<div class="row">
-	<div class="col-xl-6">
+<!-- <div class="row"> -->
+	<img src="../../../../../assets/media/dashboard/dashboard.jpg" alt="">
+	<!-- <div class="col-xl-6">
 		<div class="row row-full-height">
 			<div class="col-sm-12 col-md-12 col-lg-6">
 				<kt-portlet [class]="'kt-portlet--height-fluid-half kt-portlet--border-bottom-brand'">
@@ -45,11 +46,11 @@
 				<kt-widget12></kt-widget12>
 			</kt-portlet-body>
 		</kt-portlet>
-	</div>
-</div>
+	</div> -->
+<!-- </div> -->
 
 
-<kt-portlet>
+<!-- <kt-portlet>
 	<kt-portlet-body [class]="'kt-portlet__body--fit'">
 		<div class="row row-no-padding row-col-separator-xl">
 			<div class="col-xl-4">
@@ -63,10 +64,10 @@
 			</div>
 		</div>
 	</kt-portlet-body>
-</kt-portlet>
+</kt-portlet> -->
 
 
-<div class="row">
+<!-- <div class="row">
 	<div class="col-xl-4">
 		<kt-portlet [class]="'kt-portlet--height-fluid'">
 			<kt-portlet-header [title]="'Download Files'">
@@ -119,10 +120,10 @@
 			</kt-portlet-body>
 		</kt-portlet>
 	</div>
-</div>
+</div> -->
 
 
-<div class="row">
+<!-- <div class="row">
 	<div class="col-xl-8">
 		<kt-portlet [class]="'kt-portlet--height-fluid'">
 			<kt-portlet-header [title]="'Exclusive Datatable'" [class]="'kt-portlet__head--lg kt-portlet__head--noborder kt-portlet__head--break-sm'">
@@ -151,10 +152,10 @@
 			</kt-portlet-body>
 		</kt-portlet>
 	</div>
-</div>
+</div> -->
 
 
-<div class="row">
+<!-- <div class="row">
 	<div class="col-xl-8">
 		<kt-portlet [class]="'kt-portlet--height-fluid'">
 			<kt-portlet-header [title]="'Best Sellers'">
@@ -179,7 +180,7 @@
 			</kt-portlet-body>
 		</kt-portlet>
 	</div>
-</div>
+</div> -->
 
 
 <!--
