--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-payment/part-payment.component.html
@@ -47,13 +47,7 @@
                 <td>-</td>
             </ng-template>
 
-            <div class="row justify-content-center kt-padding-t-25 kt-padding-b-15">
-                <div class="col-6 text-center">
-                    <kt-button [value]="'Part Payment'" [type]="'button'" (click)="partPayment()"></kt-button>
-                    <span class="kt-padding-5"></span>
-                    <kt-button [value]="'View Part Payment Logs'" [type]="'button'" (click)="viewEmiLogs()"></kt-button>
-                </div>
-            </div>
+            
 
             <div *ngIf="showPartAmountInput" class="row justify-content-center kt-padding-t-25 kt-padding-b-5">
                 <div class="col-12">
@@ -64,23 +58,31 @@
                     <div class="row justify-content-center">
                         <div class="col-6">
                             <div class="row kt-margin-t-15">
-                                <div class="align-self-center font-weight-500 col text-right">
+                                <div class="align-self-center font-weight-500 offset-1 col-3 text-right">
                                     <label for="" class="mb-0"> Enter Amount </label>
                                 </div>
-                                <div class="col">
+                                <div class="col-6">
                                     <input ktWeight [class.isError]="partAmount.touched && partAmount.invalid"
-                                        class="form-control" type="text" [formControl]="partAmount" ktWeight />
+                                        class="form-control" type="text" [formControl]="partAmount"  />
                                     <mat-error *ngIf="partAmount.errors?.required && partAmount.touched">
                                         Field Required
                                     </mat-error>
                                 </div>
-                                <div class="col">
-                                    <kt-button [type]="'button'" [value]="'Continue'" (click)="partAmountContinue()">
-                                    </kt-button>
-                                </div>
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+
+            <div class="row justify-content-center kt-padding-t-25 kt-padding-b-15">
+                <div class="col-8 text-center">
+                    <kt-button [value]="'Proceed'" [type]="'button'" (click)="partAmountContinue()"></kt-button>
+                    <span class="kt-padding-5"></span>
+                    <kt-button [value]="'View Part Payment Logs'" [type]="'button'" (click)="viewEmiLogs()"></kt-button>
+                    <span class="kt-padding-5"></span>
+                    
+                    <kt-button [value]="'Cancel'" [type]="'reset'" (click)="partAmount.reset();payableAmountSummary=''">
+                </kt-button>
                 </div>
             </div>
             <div *ngIf="payableAmountSummary">
