--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-address/user-address.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-address/user-address.component.html
@@ -428,7 +428,7 @@
                                                             <!-- <img src="../../../../../assets/media/icons/dit.svg" alt=""
                                                                 class="kt-pointer edit-icon"
                                                             (click)="editImages(idx, 'permanent');"> -->
-                                                            <img *ngIf="addressForm.controls.addressProofTypeId.value != 2"
+                                                            <img *ngIf="(addressForm.controls.addressProofTypeId.value != 2 && identityForm.controls.moduleId.value == 1) || identityForm.controls.moduleId.value == 3"
                                                                 src="../../../../../assets/media/icons/cancel.svg"
                                                                 alt="" class="kt-pointer remove-icon"
                                                                 (click)="removeImages(idx, 'permanent');">
