--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
@@ -219,7 +219,7 @@
 								<input type="text" class="form-control" placeholder="Select File"
 									aria-label="Recipient's username" aria-describedby="basic-addon2"
 									formControlName="form60" readonly
-									[class.isError]="controls.form60.touched && controls.form60.invalid" />
+									[class.isError]="controls.panImage.touched && controls.panImage.invalid" />
 								<div class="input-group-append">
 									<span class="input-group-text bg kt-pointer font-weight" id="basic-addon2"
 										(click)="pan.click()">Attach</span>
