--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/view-packet-log/view-packet-log.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/view-packet-log/view-packet-log.component.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col">
+            <div class="col-3">
                 <label for="">Packets:
                     <ng-container *ngFor="let item of modalData.loanPacketDetails[0].packets; last as l">
                         <span>{{ item.packetUniqueId | uppercase }}</span>
@@ -29,8 +29,8 @@
                 </label>
             </div>
             <div class="col">
-                <!-- <label for="">Current Location:</label>
-                {{ currentLocation$ | async }} -->
+                <label *ngIf="currentLocation$" for="">Current Location:</label>
+                {{ currentLocation$.address | async }}
             </div>
         </div>
         <div class="mat-table__wrapper custom" [ngStyle]="{'overflow-x':'hidden'}">
