--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/applied-scrap/applied-scrap.component.html
@@ -149,6 +149,9 @@
                                 <button (click)="getPacketDetails(item)"
                                     class="primary-button">{{item?.scrapStage?.stageName | uppercase}}</button>
                             </div>
+                            <div *ngIf="item?.scrapStage?.id == 12">
+                                <button class="primary-button">{{item?.scrapStage?.stageName | uppercase}}</button>
+                            </div>
                         </div>
                     </mat-cell>
                 </ng-container>
