pkt-fe::chnges loan transfer,kyc, prt old loan

--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-list/new-request-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/new-request-list/new-request-list.component.html
@@ -64,7 +64,7 @@
                         <div *ngxPermissionsOnly="['updateNewRequest']">
                             <button style="width: 120px;" class="apply-kyc" (click)="editProduct(row)"
                                 *ngIf="!row.isAssigned">
-                                Update
+                                Edit
                             </button>
                         </div>
                     </mat-cell>
