--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-review/user-review.component.html
@@ -652,11 +652,25 @@
                     <div class="row kt-margin-t-20">
                         <div class="col-6">
                             <div class="row">
-                                <div class="offset-1 col-12 form-label header">
+                                <div class="offset-1 col form-label header">
                                     <h6 *ngIf="!data.userType">Current Residential Address </h6>
                                     <h6 *ngIf="data.userType === 'Corporate'">Communication Address </h6>
                                 </div>
+
                             </div>
+                        </div>
+                        <div class="col form-label" style="margin-left: 4%;">
+                            <label class="custom-checkbox ">
+                                <span *ngIf="!data.userType" class="label-checkbox ml-5">
+                                    Current Residential Address same as Permanent Address
+                                </span>
+                                <span *ngIf="data.userType === 'Corporate'" class="label-checkbox">
+                                    Current Communication Address same as Permanent Address
+                                </span>
+                                <input type="checkbox" class=""
+                                    (change)="sameAddressAsPermanent($event.target.checked)">
+                                <span class="checkmark top-0"></span>
+                            </label>
                         </div>
                     </div>
 
