--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/registered-customer-request/registered-customer-request.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/registered-customer-request/registered-customer-request.component.html
@@ -7,13 +7,26 @@
 
                 <ng-container matColumnDef="fullName">
                     <mat-header-cell *matHeaderCellDef>Full Name</mat-header-cell>
-                    <mat-cell *matCellDef="let customer">{{customer.firstName | titlecase}}&nbsp;{{customer.lastName | titlecase}}
+                    <mat-cell *matCellDef="let customer">
+                        {{customer.firstName | titlecase}}&nbsp;{{customer.lastName | titlecase}}
                     </mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="mobileNumber">
                     <mat-header-cell *matHeaderCellDef>Mobile Number</mat-header-cell>
                     <mat-cell *matCellDef="let customer">{{customer.mobileNumber }}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="email">
+                    <mat-header-cell *matHeaderCellDef>Email</mat-header-cell>
+                    <mat-cell *matCellDef="let customer">{{customer.email }}
+                    </mat-cell>
+                </ng-container>
+                <ng-container matColumnDef="source">
+                    <mat-header-cell *matHeaderCellDef>Source</mat-header-cell>
+                    <mat-cell *matCellDef="let customer">
+                        <span *ngIf="customer.isFromApp"> Mobile</span>
+                        <span *ngIf="!customer.isFromApp"> Web</span>
                     </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -25,8 +38,8 @@
             <div class="mat-table__message" *ngIf="dataSource.isPreloadTextViewed$ | async">Please wait....</div>
         </div>
 
-         <!-- start: BOTTOM -->
-         <div class="mat-table__bottom">
+        <!-- start: BOTTOM -->
+        <div class="mat-table__bottom">
             <!-- MATERIAL SPINNER | Url: 'https://material.angular.io/components/progress-spinner/overview' -->
             <mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
             <!-- MATERIAL PAGINATOR | Binded to dasources -->
